# Letters

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-windows.yml  build.yml
electron/: main.js  preload.js
src/: i18n.js  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
