[package]
name = "letters"
version = "0.1.2"
description = "Letters — A simple writing app"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "letters_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
